--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,11 +8,7 @@ version: 2
 # Set the version of Python and other tools you might need
 build:
   tools:
-    python: "3.9"
-    # You can also specify other tool versions:
-    # nodejs: "16"
-    # rust: "1.55"
-    # golang: "1.17"
+    python: 3.8
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
