move docs dependencies to pyproject

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,9 @@ dependencies = [
 ]
 # dynamic = ["version"]
 
+[project.optional-dependencies]
+docs = ["nbsphinx", "numpydoc", "sphinx-book-theme", "sphinx_copybutton"]
+
 [project.urls]
 repository = "https://gitlab.lam.fr/plato/planetpipe/planetpipe"
 
