--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=42"]
+requires = ["setuptools>=42", "setuptools_scm[toml]>=3.4"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -26,7 +26,6 @@ dependencies = [
     "scipy",
     "sep",
     "ztfquery",
-    # "ztfquery",
     # "ztfsensors",
 ]
 dynamic = ["version"]
@@ -40,11 +39,12 @@ repository = "https://github.com/MickaelRigault/ztfimg"
 [tool.setuptools]
 include-package-data = true
 
-[tool.setuptools.dynamic]
-version = {attr = "ztfimg.__version__"}
-
 [tool.setuptools.packages.find]
 include = ["ztfimg*"]
 
 [tool.setuptools.package-data]
 "*" = [ "data/*" ]
+
+[tool.setuptools_scm]
+write_to = "ztfimg/_version.py"
+
